--- a/templates/activemq.xml.j2
+++ b/templates/activemq.xml.j2
@@ -91,7 +91,7 @@
           <systemUsage>
             <systemUsage>
                 <memoryUsage>
-                    <memoryUsage percentOfJvmHeap="{{ memory_usage }}" />
+                    <memoryUsage limit="{{ memory_usage }}" />
                 </memoryUsage>
                 <storeUsage>
                     <storeUsage limit="{{ store_usage }}"/>
